--- a/templates/repository/conf/axis2/axis2.xml.erb
+++ b/templates/repository/conf/axis2/axis2.xml.erb
@@ -543,8 +543,6 @@
                 <Password><%= @key_stores['trust_store']['password'] %></Password>
             </TrustStore>
         </parameter>
-
-        <parameter name="HostnameVerifier">AllowAll</parameter>
         <!--<parameter name="HostnameVerifier">DefaultAndLocalhost</parameter>-->
             <!--supports Strict|AllowAll|DefaultAndLocalhost or the default if none specified -->
     </transportSender>
@@ -598,6 +596,11 @@
         <!-- This parameter has been added to overcome problems encounted in SOAP action parameter -->
         <!--<parameter name="OmitSOAP12Action">true</parameter>-->
     <!--</transportSender>-->
+    <transportSender name="ws" class="org.wso2.carbon.websocket.transport.WebsocketTransportSender">
+        <parameter name="ws.outflow.dispatch.sequence" locked="false">outflowDispatchSeq</parameter>
+        <parameter name="ws.outflow.dispatch.fault.sequence" locked="false">outflowFaultSeq</parameter>
+    </transportSender>
+
     <!--<transportSender name="https"-->
                      <!--class="org.apache.axis2.transport.http.CommonsHTTPTransportSender">-->
         <!--<parameter name="PROTOCOL">HTTP/1.1</parameter>-->
