--- a/templates/repository/conf/security/cipher-tool.properties.erb
+++ b/templates/repository/conf/security/cipher-tool.properties.erb
@@ -14,13 +14,8 @@
 #   limitations under the License.
 #
 
-# Important: This properties file contains all the aliases to be used in carbon components. If any property need to
-#be secured, you need to add alias name, file name and the xpath as follows:.
-# The value goes as, the <file_name>//<xpath>,<true/false>
-# where <file_name> - is the file (along with the file path) to be secured,
-#       <xpath> - is the xpath to the property value to be secured
-#       <true / false> - This is true if the last parameter in the xpath is parameter (starts with [ and ends with ])
-# and you want its value to be replaced with "password"
+# This properties file contains all the aliases to be used in carbon components. If any property need to be secured, you need to add alias name and the value. This value is described as follows.
+# The value goes as, the file name//xpath to the property value to be secured,true if xml elements start with capital letter. Please check existing property values below.
  
 <%- @secure_vault_configs.each do |secure_vault_config_name, secure_vault_config| -%>
 <%= secure_vault_config['secret_alias'] %>=<%= secure_vault_config['secret_alias_value'] %>
