--- a/templates/repository/conf/identity/identity.xml.erb
+++ b/templates/repository/conf/identity/identity.xml.erb
@@ -471,6 +471,15 @@
                 name="IdPCacheByName" timeout="1"/>
         </CacheManager>
     </CacheConfig>
+    <ISAnalytics>
+        <DefaultValues>
+            <userName>NOT_AVAILABLE</userName>
+            <userStoreDomain>NOT_AVAILABLE</userStoreDomain>
+            <rolesCommaSeperated>NOT_AVAILABLE</rolesCommaSeperated>
+            <serviceprovider>NOT_AVAILABLE</serviceprovider>
+            <identityProvider>NOT_AVAILABLE</identityProvider>
+        </DefaultValues>
+    </ISAnalytics>
     <!--Cookies>
         <Cookie name="commonAuthId" domain="localhost" httpOnly="true" secure="true" />
     </Cookies-->
