--- a/templates/repository/conf/api-manager.xml.erb
+++ b/templates/repository/conf/api-manager.xml.erb
@@ -830,6 +830,16 @@
                 <JobQueueSize>10</JobQueueSize>
             </JMSTaskManager>
         </JMSConnectionDetails>
+        <%- if @product_profile == 'gateway-manager' || @product_profile == 'gateway-worker' -%>
+        <!--<JMSEventPublisherParameters>
+                <java.naming.factory.initial>org.wso2.andes.jndi.PropertiesFileInitialContextFactory</java.naming.factory.initial>
+                <java.naming.provider.url>repository/conf/jndi.properties</java.naming.provider.url>
+                <transport.jms.DestinationType>topic</transport.jms.DestinationType>
+                <transport.jms.Destination>throttleData</transport.jms.Destination>
+                <transport.jms.ConcurrentPublishers>allow</transport.jms.ConcurrentPublishers>
+                <transport.jms.ConnectionFactoryJNDIName>TopicConnectionFactory</transport.jms.ConnectionFactoryJNDIName>
+        </JMSEventPublisherParameters>-->
+        <%- else -%>
         <JMSEventPublisherParameters>
                 <java.naming.factory.initial>org.wso2.andes.jndi.PropertiesFileInitialContextFactory</java.naming.factory.initial>
                 <java.naming.provider.url>repository/conf/jndi.properties</java.naming.provider.url>
@@ -838,6 +848,7 @@
                 <transport.jms.ConcurrentPublishers>allow</transport.jms.ConcurrentPublishers>
                 <transport.jms.ConnectionFactoryJNDIName>TopicConnectionFactory</transport.jms.ConnectionFactoryJNDIName>
         </JMSEventPublisherParameters>
+        <%- end -%>
         <!--DefaultLimits>
             <SubscriptionTierLimits>
                 <Gold>5000</Gold>
