--- a/templates/repository/conf/api-manager.xml.erb
+++ b/templates/repository/conf/api-manager.xml.erb
@@ -366,8 +366,8 @@
              In distributed deployment we should configure this property in key manager node by pointing
              gateway https( /http, we recommend users to use 'https' endpoints for security purpose) url.
              Also please note that we should point gateway revoke service to key manager -->
-        <%- if @product_profile == 'api_key-manager' and @apim_gateway and @apim_gateway['api_endpoint_host'] and
-        @apim_gateway['port']-%>
+        <%- if @apply_key_manager_specific_configurations and  @apim_gateway and
+        @apim_gateway['api_endpoint_host'] and @apim_gateway['port']-%>
             <RevokeAPIURL>https://<%= @apim_gateway['api_endpoint_host'] %>:<%= @apim_gateway['secure_api_token_revoke_endpoint_port'] %>/revoke</RevokeAPIURL>
         <%- else -%>
             <RevokeAPIURL>https://${carbon.local.ip}:${https.nio.port}/revoke</RevokeAPIURL>
