--- a/wso2am_analytics/templates/repository/conf/carbon.xml.erb
+++ b/wso2am_analytics/templates/repository/conf/carbon.xml.erb
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!--
- Copyright (c) 2016, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -26,17 +26,17 @@
     <!--
        Product Name
     -->
-    <Name>WSO2 IoT - Analytics</Name>
+    <Name>WSO2 API Manager Analytics Server</Name>
 
     <!--
        machine readable unique key to identify each product
     -->
-    <ServerKey>wso2iot_analytics</ServerKey>
+    <ServerKey>AM-Analytics</ServerKey>
 
     <!--
        Product Version
     -->
-    <Version>1.0.0</Version>
+    <Version>2.1.0</Version>
 
     <!--
        Host name or IP address of the machine hosting this server
@@ -137,7 +137,7 @@
 <%- if @ports['offset'] -%>
         <Offset><%= @ports['offset'] %></Offset>
 <%- else -%>
-        <Offset>0</Offset>
+        <Offset>1</Offset>
 <%- end -%>
 
         <!-- The JMX Ports -->
@@ -177,12 +177,12 @@
         JNDI Configuration
     -->
     <JNDI>
-        <!--
+        <!-- 
              The fully qualified name of the default initial context factory
         -->
         <DefaultInitialContextFactory>org.wso2.carbon.tomcat.jndi.CarbonJavaURLContextFactory</DefaultInitialContextFactory>
-        <!--
-             The restrictions that are done to various JNDI Contexts in a Multi-tenant environment
+        <!-- 
+             The restrictions that are done to various JNDI Contexts in a Multi-tenant environment 
         -->
         <Restrictions>
             <!--
@@ -198,7 +198,7 @@
                     </UrlContext>
                 </UrlContexts>
             </SuperTenantOnly> -->
-            <!--
+            <!-- 
                 Contexts that are common to all tenants
             -->
             <AllTenants>
@@ -211,8 +211,8 @@
                     </UrlContext> -->
                 </UrlContexts>
             </AllTenants>
-            <!--
-                 All other contexts not mentioned above will be available on a per-tenant basis
+            <!-- 
+                 All other contexts not mentioned above will be available on a per-tenant basis 
                  (i.e. will not be shared among tenants)
             -->
         </Restrictions>
@@ -303,7 +303,7 @@
 
         <!--
          Deployment update interval in seconds. This is the interval between repository listener
-         executions.
+         executions. 
         -->
         <DeploymentUpdateInterval>15</DeploymentUpdateInterval>
 
@@ -360,8 +360,8 @@
         </Role>
     </ServiceUserRoles>
 
-    <!--
-      Enable following config to allow Emails as usernames.
+    <!-- 
+      Enable following config to allow Emails as usernames. 	
     -->
     <!--EnableEmailUserName>true</EnableEmailUserName-->
 
@@ -401,11 +401,11 @@
 
         <!--
             The Authenticator configuration to be used at the JVM level. We extend the
-            java.net.Authenticator to make it possible to authenticate to given servers and
+            java.net.Authenticator to make it possible to authenticate to given servers and 
             proxies.
         -->
         <NetworkAuthenticatorConfig>
-            <!--
+            <!-- 
                 Below is a sample configuration for a single authenticator. Please note that
                 all child elements are mandatory. Not having some child elements would lead to
                 exceptions at runtime.
@@ -567,7 +567,7 @@
 
        The value of the Item element is the first parameter in the query string(e.g. ?wsdl)
        which needs special processing
-
+       
        The value of the Class element is a class which implements
        org.wso2.carbon.transport.HttpGetRequestProcessor
     -->
@@ -595,16 +595,14 @@
 	and in  worker nodes set only AutoCheckout to true.
     -->
     <DeploymentSynchronizer>
-        <Enabled><%= @dep_sync['enabled'] %></Enabled>
-        <AutoCommit><%= @dep_sync['auto_commit'] %></AutoCommit>
-        <AutoCheckout><%= @dep_sync['auto_checkout'] %></AutoCheckout>
-        <RepositoryType><%= @dep_sync['repository_type'] %></RepositoryType>
-        <%- if @dep_sync['repository_type'] == "svn" -%>
-        <SvnUrl><%= @dep_sync['svn']['url'] -%></SvnUrl>
-        <SvnUser><%= @dep_sync['svn']['user'] -%></SvnUser>
-        <SvnPassword><%= @dep_sync['svn']['password'] -%></SvnPassword>
-        <SvnUrlAppendTenantId><%= @dep_sync['svn']['append_tenant_id'] -%></SvnUrlAppendTenantId>
-        <%- end -%>
+        <Enabled>false</Enabled>
+        <AutoCommit>false</AutoCommit>
+        <AutoCheckout>true</AutoCheckout>
+        <RepositoryType>svn</RepositoryType>
+        <SvnUrl>http://svnrepo.example.com/repos/</SvnUrl>
+        <SvnUser>username</SvnUser>
+        <SvnPassword>password</SvnPassword>
+        <SvnUrlAppendTenantId>true</SvnUrlAppendTenantId>
     </DeploymentSynchronizer>
 
     <!-- Deployment Synchronizer Configuration. Uncomment the following section when running with "registry based" dep sync.
@@ -654,7 +652,7 @@
         name="pgPort"  - The port (default: 5435)
         name="pgAllowOthers"  - Allow other computers to connect
         name="trace" - Print additional trace information; for all servers
-        name="baseDir" - The base directory for H2 databases; for all servers
+        name="baseDir" - The base directory for H2 databases; for all servers  
     -->
     <!--H2DatabaseConfiguration>
         <property name="web" />
