--- a/wso2am_analytics/templates/bin/wso2server.sh.erb
+++ b/wso2am_analytics/templates/bin/wso2server.sh.erb
@@ -1,23 +1,20 @@
 #!/bin/sh
-# ------------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
+#  Copyright 2005-2012 WSO2, Inc. http://www.wso2.org
 #
-# Copyright (c) 2016, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
 #
-# WSO2 Inc. licenses this file to you under the Apache License,
-# Version 2.0 (the "License"); you may not use this file except
-# in compliance with the License.
-# You may obtain a copy of the License at
+#      http://www.apache.org/licenses/LICENSE-2.0
 #
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
 
-# -----------------------------------------------------------------------------
+# ----------------------------------------------------------------------------
 # Main Script for the WSO2 Carbon Server
 #
 # Environment Variable Prequisites
@@ -37,7 +34,6 @@
 #ulimit -n 100000
 
 # NOTE: This is an edited wso2server.sh script to facilitate spark environment variables for WSO2DAS
-
 JAVA_HOME=<%= @java_home %>
 
 cygwin=false;
@@ -297,7 +293,7 @@ while [ "$status" = "$START_EXIT_STATUS" ]
 do
     $JAVACMD \
     -Xbootclasspath/a:"$CARBON_XBOOTCLASSPATH" \
-    -Xms<%= @jvm['xms'] %> -Xmx<%= @jvm['xmx'] %> -XX:MaxPermSize=<%= @jvm['max_perm_size'] %> \
+    -Xms256m -Xmx1024m -XX:MaxPermSize=256m \
     -XX:+HeapDumpOnOutOfMemoryError \
     -XX:HeapDumpPath="$CARBON_HOME/repository/logs/heap-dump.hprof" \
     $JAVA_OPTS \
@@ -327,6 +323,8 @@ do
     -Djava.net.preferIPv4Stack=true \
     -Dcom.ibm.cacheLocalHost=true \
     -Dsetup \
+    -Djava.util.prefs.systemRoot=<%= @java_prefs_system_root %> \
+    -Djava.util.prefs.userRoot=<%= @java_prefs_user_root %> \
     $NODE_PARAMS \
     org.wso2.carbon.bootstrap.Bootstrap $*
     status=$?
