--- a/wso2am_analytics/templates/repository/conf/security/authenticators.xml.erb
+++ b/wso2am_analytics/templates/repository/conf/security/authenticators.xml.erb
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 
 <!--
-  ~  Copyright (c) 2016, WSO2 Inc. (http://wso2.com) All Rights Reserved.
+  ~ Copyright 2005-2011 WSO2, Inc. (http://wso2.com)
   ~
-  ~  WSO2 Inc. licenses this file to you under the Apache License,
-  ~  Version 2.0 (the "License"); you may not use this file except
-  ~  in compliance with the License.
-  ~  You may obtain a copy of the License at
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
   ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~ http://www.apache.org/licenses/LICENSE-2.0
   ~
-  ~  Unless required by applicable law or agreed to in writing,
-  ~  software distributed under the License is distributed on an
-  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-  ~  KIND, either express or implied.  See the License for the
-  ~  specific language governing permissions and limitations
-  ~  under the License.
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
   -->
 
 <!--
@@ -30,17 +28,18 @@
     </Authenticator>
 
     <!-- Authenticator Configurations for SAML2SSOAuthenticator -->
-    <Authenticator name="SAML2SSOAuthenticator" disabled="<%= (!@sso_authentication['enabled']) %>">
+    <Authenticator name="SAML2SSOAuthenticator" disabled="true">
         <Priority>10</Priority>
         <Config>
-            <Parameter name="LoginPage"><%= @sso_authentication['login_page'] %></Parameter>
-            <Parameter name="ServiceProviderID"><%= @sso_authentication['service_provider_id'] %></Parameter>
-            <Parameter name="IdentityProviderSSOServiceURL"><%= @sso_authentication['sso_service_url'] %></Parameter>
+            <Parameter name="LoginPage">/carbon/admin/login.jsp</Parameter>
+            <Parameter name="ServiceProviderID">carbonServer</Parameter>
+            <Parameter name="IdentityProviderSSOServiceURL">https://localhost:9443/samlsso</Parameter>
             <Parameter name="NameIDPolicyFormat">urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</Parameter>
-            <Parameter name="AssertionConsumerServiceURL"><%= @sso_authentication['consumer_service_url'] %></Parameter>
+            <Parameter name="AssertionConsumerServiceURL">https://localhost:9443/acs</Parameter>
 
             <!-- <Parameter name="IdPCertAlias">wso2carbon</Parameter> -->
             <!-- <Parameter name="ResponseSignatureValidationEnabled">false</Parameter> -->
+            <!-- <Parameter name="AssertionSignatureValidationEnabled">false</Parameter> -->
             <!-- <Parameter name="LoginAttributeName"></Parameter> -->
             <!-- <Parameter name="RoleClaimAttribute"></Parameter> -->
             <!-- <Parameter name="AttributeValueSeparator">,</Parameter> -->
@@ -50,12 +49,12 @@
             <!-- <Parameter name="ProvisioningDefaultRole">admin</Parameter> -->
             <!-- <Parameter name="IsSuperAdminRoleRequired">true</Parameter> -->
 	</Config>
-
+	
 	<!-- If this authenticator should skip any URI from authentication, specify it under "SkipAuthentication"
 	<SkipAuthentication>
             <UrlContains></UrlContains>
         </SkipAuthentication> -->
-
+	
 	<!-- If this authenticator should skip any URI from session validation, specify it under "SkipAuthentication
         <SkipSessionValidation>
             <UrlContains></UrlContains>
@@ -71,5 +70,6 @@
 	      <Parameter name="WhiteList"/>
 	  </Config>
     </Authenticator-->
-
+    
 </Authenticators>
+
