--- a/wso2am/templates/repository/deployment/server/synapse-configs/default/api/_UserInfoAPI_.xml.erb
+++ b/wso2am/templates/repository/deployment/server/synapse-configs/default/api/_UserInfoAPI_.xml.erb
@@ -6,7 +6,7 @@
             <send>
                 <endpoint>
                     <%- if @apim_keymanager and @apim_keymanager['host'] and @apim_keymanager['port'] -%>
-                    <http uri-template="<%= @apim_keymanager['host'] %>:<%= @apim_keymanager['port'] %>/oauth2/userinfo">
+                    <http uri-template="https://<%= @apim_keymanager['host'] %>:<%= @apim_keymanager['port'] %>/oauth2/userinfo">
                     <%- else -%>
                     <http uri-template="https://{uri.var.hostname}:{uri.var.portnum}/oauth2/userinfo">
                     <%- end -%>
